[gd_scene load_steps=23 format=3 uid="uid://cgphplbf0dkxh"]

[ext_resource type="Script" uid="uid://dlys14j0aquqp" path="res://script/character_selection.gd" id="1_sikl0"]
[ext_resource type="Texture2D" uid="uid://cw8ul2t3t06d6" path="res://Icons/close.png" id="2_3enf0"]
[ext_resource type="FontFile" uid="uid://dyar6fh26gmft" path="res://Fonts/Inter Extra Bold 800.otf" id="2_4hxel"]
[ext_resource type="Texture2D" uid="uid://bkie4q0ifl3t1" path="res://Icons/DX41Open0012.png" id="4_08fh5"]
[ext_resource type="Texture2D" uid="uid://c8lnu5xy6he84" path="res://Icons/tanks.png" id="5_6p47a"]
[ext_resource type="PackedScene" uid="uid://bvl3fckfr7wmc" path="res://scene/stages.tscn" id="6_rgdwx"]
[ext_resource type="Texture2D" uid="uid://bpf8motvuwm7x" path="res://Tile Assets/Tanks.png" id="7_yr170"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4q6nc"]
bg_color = Color(0, 0, 0, 0.533333)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4pkwc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uxx5h"]
bg_color = Color(0.493545, 0.493546, 0.493545, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlona"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mmvlu"]
bg_color = Color(0.374139, 0.374139, 0.374139, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s28pm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3kfx4"]
bg_color = Color(0.411236, 0.689794, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kw65e"]
bg_color = Color(0.194751, 0.343967, 4.81308e-08, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxjjr"]
bg_color = Color(0.411236, 0.689794, 0, 1)
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mfhk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xq12r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xwjey"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sck50"]
bg_color = Color(0, 0.333333, 0.454902, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5kkd"]
bg_color = Color(0, 0.211765, 0.294118, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dtk1"]
bg_color = Color(0, 0.333333, 0.454902, 0)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 510.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sikl0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -509.0
offset_right = 772.0
offset_bottom = 720.0

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -269.0
offset_top = -1.0
offset_right = -238.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4q6nc")

[node name="Character 1" type="Button" parent="Background"]
layout_mode = 0
offset_left = 42.5007
offset_top = 98.0
offset_right = 273.501
offset_bottom = 665.0
theme_override_constants/icon_max_width = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_4pkwc")
theme_override_styles/hover = SubResource("StyleBoxFlat_uxx5h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mlona")
theme_override_styles/normal = SubResource("StyleBoxFlat_mmvlu")
icon_alignment = 1

[node name="SelectButton 1" type="Button" parent="Background/Character 1"]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = 471.0
offset_right = 224.0
offset_bottom = 519.0
scale = Vector2(0.8, 0.8)
theme_override_styles/focus = SubResource("StyleBoxEmpty_s28pm")
theme_override_styles/hover = SubResource("StyleBoxFlat_3kfx4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kw65e")
theme_override_styles/normal = SubResource("StyleBoxFlat_cxjjr")
text = "SELECT"

[node name="Character 2" type="Button" parent="Background"]
layout_mode = 0
offset_left = 285.501
offset_top = 98.0
offset_right = 516.501
offset_bottom = 665.0
theme_override_constants/icon_max_width = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_8mfhk")
theme_override_styles/hover = SubResource("StyleBoxFlat_uxx5h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mlona")
theme_override_styles/normal = SubResource("StyleBoxFlat_mmvlu")
icon_alignment = 1

[node name="SelectButton 2" type="Button" parent="Background/Character 2"]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = 471.0
offset_right = 224.0
offset_bottom = 519.0
scale = Vector2(0.8, 0.8)
theme_override_styles/focus = SubResource("StyleBoxEmpty_s28pm")
theme_override_styles/hover = SubResource("StyleBoxFlat_3kfx4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kw65e")
theme_override_styles/normal = SubResource("StyleBoxFlat_cxjjr")
text = "SELECT"

[node name="Character 3" type="Button" parent="Background"]
layout_mode = 0
offset_left = 527.501
offset_top = 98.0
offset_right = 758.501
offset_bottom = 665.0
theme_override_constants/icon_max_width = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_xq12r")
theme_override_styles/hover = SubResource("StyleBoxFlat_uxx5h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_mlona")
theme_override_styles/normal = SubResource("StyleBoxFlat_mmvlu")
icon_alignment = 1

[node name="SelectButton 3" type="Button" parent="Background/Character 3"]
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = 471.0
offset_right = 224.0
offset_bottom = 519.0
scale = Vector2(0.8, 0.8)
theme_override_styles/focus = SubResource("StyleBoxEmpty_s28pm")
theme_override_styles/hover = SubResource("StyleBoxFlat_3kfx4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kw65e")
theme_override_styles/normal = SubResource("StyleBoxFlat_cxjjr")
text = "SELECT"

[node name="Label" type="Label" parent="Background"]
layout_mode = 0
offset_left = 209.0
offset_top = 33.0
offset_right = 597.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("2_4hxel")
theme_override_font_sizes/font_size = 30
text = "SELECT YOU CHARACTER"

[node name="BackButton" type="Button" parent="Background"]
layout_mode = 0
offset_left = 720.0
offset_top = 33.0
offset_right = 771.0
offset_bottom = 81.0
theme_override_constants/icon_max_width = 30
theme_override_font_sizes/font_size = 3
theme_override_icons/icon = ExtResource("2_3enf0")
theme_override_styles/focus = SubResource("StyleBoxFlat_xwjey")
theme_override_styles/hover = SubResource("StyleBoxFlat_sck50")
theme_override_styles/pressed = SubResource("StyleBoxFlat_m5kkd")
theme_override_styles/normal = SubResource("StyleBoxFlat_7dtk1")
icon_alignment = 1

[node name="Dx41Open0012" type="Sprite2D" parent="Background"]
position = Vector2(154.501, 303)
rotation = 1.5708
scale = Vector2(4.48438, 4.48438)
texture = ExtResource("4_08fh5")

[node name="Tanks" type="Sprite2D" parent="Background"]
position = Vector2(400.501, 334)
rotation = 1.5708
scale = Vector2(3.1827, 3.1827)
texture = ExtResource("5_6p47a")

[node name="Tanks2" type="Sprite2D" parent="Background"]
position = Vector2(641, 313)
rotation = 3.14159
scale = Vector2(0.559531, 0.559531)
texture = ExtResource("7_yr170")

[node name="Stages" parent="." instance=ExtResource("6_rgdwx")]
visible = false
layout_mode = 1
offset_left = -500.0
offset_top = 0.0
offset_right = -500.0
offset_bottom = 0.0

[connection signal="mouse_entered" from="Background/Character 1" to="." method="_on_character_1_mouse_entered"]
[connection signal="mouse_exited" from="Background/Character 1" to="." method="_on_character_1_mouse_exited"]
[connection signal="mouse_entered" from="Background/Character 1/SelectButton 1" to="." method="_on_select_button_1_mouse_entered"]
[connection signal="pressed" from="Background/Character 1/SelectButton 1" to="." method="_on_select_button_1_pressed"]
[connection signal="mouse_entered" from="Background/Character 2" to="." method="_on_character_2_mouse_entered"]
[connection signal="mouse_exited" from="Background/Character 2" to="." method="_on_character_2_mouse_exited"]
[connection signal="mouse_entered" from="Background/Character 2/SelectButton 2" to="." method="_on_select_button_2_mouse_entered"]
[connection signal="pressed" from="Background/Character 2/SelectButton 2" to="." method="_on_select_button_2_pressed"]
[connection signal="mouse_entered" from="Background/Character 3" to="." method="_on_character_3_mouse_entered"]
[connection signal="mouse_exited" from="Background/Character 3" to="." method="_on_character_3_mouse_exited"]
[connection signal="mouse_entered" from="Background/Character 3/SelectButton 3" to="." method="_on_select_button_3_mouse_entered"]
[connection signal="pressed" from="Background/Character 3/SelectButton 3" to="." method="_on_select_button_3_pressed"]
[connection signal="pressed" from="Background/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="stages_pressed_back" from="Stages" to="." method="_on_stages_stages_pressed_back"]
